<resources>
    <string name="app_name">Offer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="explore">Explore</string>
    <string name="category">Category</string>
    <string name="facouite">Favourite</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="more">More</string>
    <string name="my_account">My Account</string>
    <string name="register_company">Register Company</string>
    <string name="About">About</string>
    <string name="call_us">Call Us</string>
    <string name="facebook">\@facebook</string>
    <string name="Twitter">\@twitter</string>
    <string name="instgram">\@instagram</string>
    <string name="setting">Setting</string>
    <string name="Favourite">Favourite</string>
    <string name="compnay_Name">Company Name</string>
    <string name="personalName">Personal Name</string>
    <string name="email">Email</string>
    <string name="Tel">Tel</string>
    <string name="Mobile">Mobile</string>
    <string name="desiredUserName">Desired Username</string>
    <string name="creatAccount">Create Account</string>
    <string name="title_activity_maps">Map</string>
</resources>
