<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    >
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_gravity="center"
        >
       <ScrollView
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:padding="5dp">
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:src="@drawable/defualt_image"
                android:id="@+id/companyImage"
                android:onClick="OpenGallery"
                />
        <EditText
            android:layout_marginTop="5dp"
            android:layout_margin="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/compnay_Name"
            android:layout_gravity="center"
            android:gravity="center"
            android:id="@+id/companyName"
            android:background="@drawable/border"
            android:padding="5dp"/>
        <EditText
            android:layout_margin="3dp"
            android:id="@+id/personalName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/personalName"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="5dp"
            android:background="@drawable/border"/>
            <EditText
            android:layout_margin="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
                android:id="@+id/email"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@drawable/border"
            android:padding="5dp"/>
        <EditText
            android:layout_margin="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Tel"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="5dp"
            android:id="@+id/tel"
            android:background="@drawable/border"/><EditText
            android:layout_margin="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Mobile"
            android:id="@+id/mobile"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@drawable/border"
            android:padding="5dp"/>
        <EditText
            android:layout_margin="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/desiredUserName"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="5dp"
            android:id="@+id/desiredName"
            android:background="@drawable/border"/>
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="horizontal">
               <Spinner
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:id="@+id/spinner"
                   android:layout_weight="3"
                   android:layout_gravity="center_vertical"></Spinner>
               <Button

                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="New"
                   android:id="@+id/newBtn"
                   android:background="@color/colorPrimary"
                   android:textColor="@android:color/white"/>
           </LinearLayout>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/cornor_dark"
                android:textColor="@android:color/white"
                android:padding="15dp"
                android:id="@+id/createBtn"
                android:onClick="GetData"
                android:text="@string/creatAccount"/>
        </LinearLayout>
       </ScrollView>
    </android.support.v7.widget.CardView>
</LinearLayout>
