<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="15dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.karim.offer_sef_v2.Fragmets.MoreFragment">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="right"
                android:layout_column="1"
                android:layout_gravity="right|center_vertical">
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/my_account"
    android:textColor="@android:color/black"
    android:textSize="15dp"
    android:gravity="center"
    android:layout_gravity="center"
    android:paddingRight="10dp"
    />
                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:src="@drawable/user"
                    android:layout_gravity="right"
                    />
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="right"
                android:paddingTop="7dp"
                android:id="@+id/Register"
                android:layout_column="1"
                android:layout_gravity="right|center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_company"
                    android:textColor="@android:color/black"
                    android:textSize="15dp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:paddingRight="10dp"
                    />
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:src="@drawable/enterprise"
                    android:layout_gravity="right"
                    />
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="right"
                android:paddingTop="7dp"
                android:layout_column="1"
                android:layout_gravity="right|center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/About"
                    android:textColor="@android:color/black"
                    android:textSize="15dp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:paddingRight="10dp"
                    />
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:src="@drawable/info"
                    android:layout_gravity="right"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="right"
                android:paddingTop="7dp"
                android:layout_column="1"
                android:layout_gravity="right|center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/call_us"
                    android:textColor="@android:color/black"
                    android:textSize="15dp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:paddingRight="10dp"
                    />
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:src="@drawable/phone"
                    android:layout_gravity="right"
                    />
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="right"
                android:paddingTop="7dp"
                android:layout_column="1"
                android:layout_gravity="right|center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/facebook"
                    android:textColor="@android:color/black"
                    android:textSize="15dp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:paddingRight="10dp"
                    />
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:src="@drawable/facebook"
                    android:layout_gravity="right"
                    />
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="right"
                android:paddingTop="7dp"
                android:layout_column="1"
                android:layout_gravity="right|center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/instgram"
                    android:textColor="@android:color/black"
                    android:textSize="15dp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:paddingRight="10dp"
                    />
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:src="@drawable/instagram"
                    android:layout_gravity="right"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="right"
                android:paddingTop="7dp"
                android:layout_column="1"
                android:layout_gravity="right|center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting"
                    android:textColor="@android:color/black"
                    android:textSize="15dp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:paddingRight="10dp"
                    />
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:src="@drawable/settings"
                    android:layout_gravity="right"
                    />
            </LinearLayout>
    </LinearLayout>
</ScrollView>
</LinearLayout>
